--- a/hw3.Rnw
+++ b/hw3.Rnw
@@ -23,7 +23,7 @@
 \item For $\X \in \bbR^{n \times p}$ rank $p < n$, find $\I_n -\P_{X^T}$.  What does this lead you to conclude about whether an arbitrary $\lambdab$  leads to a unique unbiased estimator of $\lambdab^T\b$ using the result from class that generalizes Proposition 2.1.6 in Christensen? 
 \end{enumerate}
 
-\item For $\X \in \bbR^{n \times p}$ rank $p < n$ and $\V >0$, show that $\P_\V \equiv \X \left(\X^T\V^{-1}\X\right)^{-1}\X^T \V^{-1}$ is idempotent (and therfore is a projection).
+\item For $\X \in \bbR^{n \times p}$ rank $p < n$ and $\V >0$, show that $\P_\V \equiv \X \left(\X^T\V^{-1}\X\right)^{-1}\X^T \V^{-1}$ is idempotent.
 
 \item Show that $\P_\V$ (defined above) is an orthogonal projection under the inner product $\langle \x, \y \rangle_{\V^{-1}} \equiv \x^T\V^{-1} \y$ using the definition in the slides; $\P_\V$ is an orthogonal projection if $\langle \P_\V\y,  (\I_n - \P_\V)\y \rangle_{\V^{-1}} = 0$.  Is it always an orthogonal projection using $\langle \x, \y \rangle = \x^T\y$?
 
@@ -50,7 +50,9 @@ $\Y \in \bbR^n$, and show that it is unique.
 \item Suppose $\Y=\X\b + \eps$. Show that  
 
 Show the GLS estimator $\bhat_{\V}$ is equal to the LUE given by
-$$\bhat_{\Phib} = \left( \X^T \Phi^{-1} \X \right)^{-1} \X^T \Phib^{-1} \Y$$ iff $$\Cov[\eps] = \V \equiv \X \Psib \X^T + \Phib$$. 
+$$\bhat_{\Phib} = \left( \X^T \Phi^{-1} \X \right)^{-1} \X^T \Phib^{-1} \Y$$ 
+iff $\Cov[\eps] = \sigma^2\V$, where 
+$$\V \equiv \X \Psib \X^T + \Phib$$. 
 (Review the steps of the proof in Proposition 2.7.5 in Christensen and the outline in class of the Theorem that showed
 $\bhat_\V =\bhat$ for all $\Y$ iff $\V$ can be written 
 $\V = \X\Psib \X^T + \H\Phib \H^T$
@@ -58,11 +60,9 @@ for some $\H$ such that $\H^T \X=0$ and for some positive definite matrices
 $\Psib$ and $\Phib$ of the appropriate dimension)
 
 
-\item Show that that the $\E[\P_\V \eps, \eps^T (\I_n - \P_\V)^T ] = \zero$.  (Hint construct an appropriate decomposition of $\eps = \eps_\X + \eps_N$ that has the desired covariance sturture as in class.
-\item Show that that the $\E[\P_{\Phib} \eps, \eps^T(\I_n - \P_{\Phib})^T] = \zero$ iff $\V = \X\Psib \X^T + \Phib$
-\item (Challenging) Show that for $\Y=\X\b + \eps$ and 
-$\Cov[\eps] = \V \equiv \X \Psib \X^T + \Phib$, that $\bhat_\V = \bhat_{\Phib}$ iff the covariance of $\P_{\Phib} \eps$ and $(\I_n - \P_{\Phib}) \eps$ is  $\zero$.  
-
+\item Show that that $\E[\P_\V \eps, \eps^T (\I_n - \P_\V)^T ] = \zero$.  (Hint construct an appropriate decomposition of $\eps = \eps_\X + \eps_N$ that has the desired covariance stucture.
+\item Show that that $\E[\P_{\Phib} \eps, \eps^T(\I_n - \P_{\Phib})^T] = \zero$ iff $\V = \X\Psib \X^T + \Phib$ (i.e.  $\bhat_\V = \bhat_{\Phib}$ iff $\P_{\Phib} \eps$ and $(\I_n - \P_{\Phib}) \eps$  are uncorrelated.  )
+\item Show that if $\Cov[\eps] = \sigma^2 \I_n$ that $\E[\P_{\I_n} \eps \eps^T(\I_n - \P_{\I_n}^T] \ne \zero$, where $\P_{\I_n} \equiv  \X (\XtX)^{-1} \X^T$.
 \end{enumerate}
 \end{enumerate}
 \end{document}
